--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^6.0",
+    "orchestra/testbench": "^6.0 || ^7.0 || ^8.0",
     "phpunit/phpunit": "^9.5"
   },
   "require": {
-    "laravel-arcanist/arcanist": "^0.8"
+    "laravel-arcanist/arcanist": "^0.8 || ^0.9"
   }
 }
