--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
   "description": "A package containing the components for our formbuilder using arcanist",
   "type": "library",
   "license": "MIT",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/suenert/arcanist"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "Suenerds\\ArcanistRestApiRenderer\\": "src"
@@ -15,9 +21,9 @@
   },
   "require-dev": {
     "orchestra/testbench": "^6.0 || ^7.0 || ^8.0",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^10.5"
   },
   "require": {
-    "laravel-arcanist/arcanist": "^0.8 || ^0.9"
+    "laravel-arcanist/arcanist": "dev-main"
   }
 }
