--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     "phpunit/phpunit": "^10.5"
   },
   "require": {
-    "laravel-arcanist/arcanist": "dev-main"
+    "laravel-arcanist/arcanist": "^1.0"
   }
 }
